--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
     <uses-sdk android:minSdkVersion="8" />
 
-    <application
+    <application android:name="app">
+        <uses-library android:name="com.google.android.maps"/>
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -22,6 +23,11 @@
         
     </application>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION">
+        
     </uses-permission>	
+    <uses-permission android:name="android.permission.INTERNET">
+        
+    </uses-permission>
 
+     
 </manifest>
