--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk android:minSdkVersion="8" />
 
-    <application android:name="app">
+    <application>
         <uses-library android:name="com.google.android.maps"/>
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
