Added icon images. Added path for the Start! button showing the next activity Main. Added text fields to main.

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".PreviewActivity" android:label="Preview"></activity>
+        <activity android:name=".MainActivity" android:label="Main"></activity>
         
     </application>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION">
