--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:label="@string/app_name"
+            android:label="@string/normal_mode"
             android:name=".AppActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
