--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -21,6 +21,8 @@
         </activity>
         <activity android:name=".PreviewActivity" android:label="Preview"></activity>
         <activity android:name=".MainActivity" android:label="Main"></activity>
+        <activity android:name=".OptionsActivity" android:label="Options"></activity>
+            
         
     </application>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION">
