--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -39,7 +39,8 @@
         
     </application>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION">
-	 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+       <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+ <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
         
     </uses-permission>	
     <uses-permission android:name="android.permission.INTERNET">
