--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -6,12 +6,12 @@
 
     <uses-sdk android:minSdkVersion="8" />
 
-    <application>
-        <uses-library android:name="com.google.android.maps"/>
-        android:icon="@drawable/ic_launcher"
+    <application
+        android:icon="@drawable/runs"
         android:label="@string/app_name" >
+        <uses-library android:name="com.google.android.maps"/>
         <activity
-            android:label="@string/normal_mode"
+            android:label="@string/app_name"
             android:name=".AppActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
