--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -9,43 +9,44 @@
     <application
         android:icon="@drawable/runs"
         android:label="@string/app_name" >
-        <uses-library android:name="com.google.android.maps"/>
+        <uses-library android:name="com.google.android.maps" />
+
         <activity
-            android:label="@string/app_name"
-            android:name=".AppActivity" >
-            <intent-filter >
+            android:name=".AppActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PreviewActivity" android:label="Preview">
-            
+        <activity
+            android:name=".PreviewActivity"
+            android:label="Preview" >
         </activity>
-        <activity android:name=".MainActivity" android:label="Main">
-            
+        <activity
+            android:name=".MainActivity"
+            android:label="Main" >
         </activity>
-        <activity android:name=".OptionsActivity" android:label="Options">
-            
+        <activity
+            android:name=".OptionsActivity"
+            android:label="Options" >
         </activity>
-        <activity android:name=".HelpActivity" android:label="Help">
-            
+        <activity
+            android:name=".HelpActivity"
+            android:label="Help" >
         </activity>
-         <activity android:name=".SummaryActivity" android:label="Summary">
-            
+        <activity
+            android:name=".SummaryActivity"
+            android:label="Summary" >
         </activity>
-            
-            
-        
     </application>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION">
-       <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-        
-    </uses-permission>	
-    <uses-permission android:name="android.permission.INTERNET">
-        
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+        <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
 
-     
 </manifest>
