Better help and about texts and have locked the mainActivity to portrait mode.

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -25,7 +25,8 @@
             android:label="Preview" >
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivity" 
+            android:screenOrientation="portrait"
             android:label="Main" >
         </activity>
         <activity
